[gd_scene load_steps=4 format=3 uid="uid://b2r3nd3o42j20"]

[ext_resource type="Script" path="res://Scripts/ServerScripts/online_server_game_scene.gd" id="1_mol3t"]
[ext_resource type="Theme" uid="uid://c3fas6jlnx7pa" path="res://Themes/Default_Pixel_Blue/Default_pixel_Blue.tres" id="2_5rlkn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t5ruj"]

[node name="OnlineGameScene" type="Node3D"]
script = ExtResource("1_mol3t")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_top = 227.0
offset_right = 1154.0
offset_bottom = 646.0

[node name="ServerOnlineCheck" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
horizontal_alignment = 1

[node name="PingLabel" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
horizontal_alignment = 1

[node name="ServerConnectButton" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("2_5rlkn")
text = "Connect"

[node name="ServerDisconnectButton" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("2_5rlkn")
text = "Disconnect"

[node name="ConnectionProgressBar" type="ProgressBar" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("2_5rlkn")
theme_override_styles/fill = SubResource("StyleBoxFlat_t5ruj")

[node name="ReturnToIntroButton" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("2_5rlkn")
text = "Back to Home"

[node name="Messages" type="TextEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
editable = false

[node name="Message" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter Message"
alignment = 1

[node name="Send" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Send Message"

[node name="Host" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="Join" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Join Chat Room"

[node name="Username" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Username"
alignment = 1

[connection signal="pressed" from="VBoxContainer/Send" to="." method="_on_send_pressed"]
[connection signal="pressed" from="VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="VBoxContainer/Join" to="." method="_on_join_pressed"]
